--- a/Source Code/package.json
+++ b/Source Code/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "semantic-ui-calendar-react": "^0.9.1",
     "semantic-ui-css": "^2.4.0",
     "semantic-ui-react": "^0.82.5",
     "yup": "^0.26.6"
