--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "react-sortable-tree": "^2.3.0",
-    "react-sortable-tree-theme-file-explorer": "^2.0.0",
+    "react-treebeard": "^3.1.0",
     "semantic-ui-calendar-react": "^0.9.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
