--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-split-pane": "^0.1.84",
     "react-treebeard": "^3.1.0",
     "semantic-ui-calendar-react": "^0.9.1",
     "semantic-ui-css": "^2.4.1",
