--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.4",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "formik": "^1.3.1",
