--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-drag-listview": "^0.1.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-split-pane": "^0.1.84",
