--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
+    "react-contexify": "^4.0.0",
     "react-dom": "^16.5.2",
     "react-drag-listview": "^0.1.3",
     "react-router-dom": "^4.3.1",
