--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-drag-listview": "^0.1.3",
+    "react-modal": "^3.6.1",
     "react-popup": "^0.9.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
