--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-drag-listview": "^0.1.3",
+    "react-redux": "^6.0.0",
     "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-split-pane": "^0.1.84",
-    "redux-starter-kit": "^0.4.3"
+    "redux": "^4.0.1",
+    "redux-starter-kit": "^0.4.3",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
