--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-split-pane": "^0.1.84"
+    "react-split-pane": "^0.1.84",
+    "terser": "^3.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
