--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "antd": "^3.10.4",
     "axios": "^0.18.0",
+    "formik": "^1.5.0",
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -20,7 +21,8 @@
     "react-split-pane": "^0.1.84",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
