--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.10.4",
     "axios": "^0.18.0",
     "formik": "^1.5.0",
+    "lodash": "^4.17.11",
     "normalize.css": "^8.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -17,7 +18,7 @@
     "react-redux": "^6.0.0",
     "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.5",
     "react-split-pane": "^0.1.84",
     "redux": "^4.0.1",
     "redux-starter-kit": "^0.4.3",
