--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "moxios": "^0.4.0",
+    "redux-mock-store": "^1.5.3"
+  }
 }
