--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^3.10.4",
     "axios": "^0.18.0",
     "formik": "^1.5.0",
+    "js2excel": "^1.0.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.0",
