--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-drag-listview": "^0.1.3",
+    "react-excel-renderer": "^1.1.0",
     "react-redux": "^6.0.0",
     "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
